@@ -26,7 +26,7 @@
 |               07/11/2007 - Paf - Initial release                          |
 |               08/17/2007 - Paf - Update namespace                         |
 |               08/18/2007 - Paf - Implement SourceFile::isFetcheable()     |
-|               09/25/2007 - Paf - Replace namespace Viracocha by Gnoll     |
+|               09/25/2007 - Paf - Replace namespace Gnoll by Gnoll     |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
